jokes java lib integration

--- a/app/src/paid/res/values/strigns.xml
+++ b/app/src/paid/res/values/strigns.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello_world">Hello World from paid!</string>
+    <string name="instructions">Press the button for a delicious joke!</string>
+    <string name="button_text">Tell Joke</string>
 </resources>
