--- a/app/src/free/res/layout/fragment_main.xml
+++ b/app/src/free/res/layout/fragment_main.xml
@@ -11,9 +11,17 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/instructions_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/instructions" />
+
+    <Button
+        android:id="@+id/joke_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/instructions_text_view"
+        android:text="@string/button_text" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
