--- a/app/src/paid/res/layout/fragment_main.xml
+++ b/app/src/paid/res/layout/fragment_main.xml
@@ -10,7 +10,15 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/instructions_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/instructions" />
+
+    <Button
+        android:id="@+id/joke_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/instructions_text_view"
+        android:text="@string/button_text" />
 </RelativeLayout>
